fixed issue where switching from bottom of hoem screen to training or profile causes seizures. also fixed icon clipping in mobile view

--- a/react-front-end/src/App.scss
+++ b/react-front-end/src/App.scss
@@ -4,7 +4,7 @@
 .App {
   text-align: center;
   min-width: 428px;
-  min-height: 926px;
+  // min-height: 926px;
   width: 100%;
 }
 
